# HomeWork_1

./: CameraCalibration_example.cpp  Functions.cpp  Main.cpp  README.md  README.txt  SolvePnP.h  Ubuntu.txt  calibrationSession.mat  欧阳.docx
Fanmoshang_pnpSolver/: CMakeLists.txt  main.cpp  ubuntu_command
huawei'sWork/: RM-Camera.cpp  RM-Camera.sln  RM-Camera.vcxproj  RM-Camera.vcxproj.filters  Ubuntu.txt  stdafx.cpp
solvePnP/: calibrationSession.mat  代码.cpp  棋盘格.docx
xiajiayu work1/: xijayu_ubuntu.txt
xiajiayu work1/SolvePnP/: SolvePnP.sln
xiajiayu work1/SolvePnP/SolvePnP/: Main.cpp  SolvePnP.vcxproj  SolvePnP.vcxproj.filters  head.h  segmentation.cpp  solvePnP.cpp
xiajiayu work1/SolvePnP/SolvePnP/x64/Debug/: vc141.idb
xiajiayu work1/SolvePnP/SolvePnP/x64/Debug/SolvePnP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SolvePnP.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
xiajiayu work1/SolvePnP/x64/Debug/: SolvePnP.ilk
李硕然/: C++.txt
